--- a/css/application.css
+++ b/css/application.css
@@ -1,2 +1,24 @@
+#main {
+  margin: 0 auto;
+  max-width: 990px; }
+
 body {
-  background: #fff; }
+  background: #2d3536;
+  color: white;
+  font-family: Helvetica, Arial, sans-serif; }
+
+h1,
+p {
+  text-align: center; }
+
+h1 {
+  font-size: 80px; }
+
+.industry-list {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.industry-item {
+  float: left;
+  width: 225px; }
