--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,7 +2,9 @@
 // Colors
 // ====================
 
-$slate: #2d3536;
-$blue:  #65bae1;
-$red:   #cc4c4d;
-$white: #fff;
+$slate:       #2d3536;
+$slate_light: #d9dee1;
+$blue:        #65bae1;
+$red:         #cc4c4d;
+$red_dark:    #b94849;
+$white:       #fff;
