--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,15 @@
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   background: $slate;
   color: $white;
@@ -11,4 +23,5 @@ p {
 
 h1 {
   font-size: 80px;
+  margin-top: 0;
 }
