--- a/sass/_industries.scss
+++ b/sass/_industries.scss
@@ -1,10 +1,72 @@
+$item_size:    225px;
+$item_gutter:  30px;
+
 .industry-list {
   list-style: none;
   margin: 0;
   padding: 0;
+
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 }
 
 .industry-item {
   float: left;
-  width: 225px;
+  margin: 0 $item_gutter $item_gutter 0;
+
+  &:nth-child(4n+4) {
+    margin-right: 0;
+  }
+}
+
+label {
+  background: rgba($slate_light, 0.1);
+  display: block;
+  height: $item_size;
+  line-height: $item_size;
+  text-align: center;
+  width: $item_size;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+input[type=checkbox]:checked + label {
+  background: $blue;
+}
+
+
+input[type=checkbox] {
+  opacity: 0;
+  position: absolute;
+}
+
+.btn {
+  background: $red;
+  border: none;
+  border-radius: 4px;
+  border-spacing: 0;
+  color: $white;
+  display: inline-block;
+  margin: 0;
+  padding: 10px;
+  text-indent: 0;
+  text-align: center;
+  &:focus {
+    outline: none;
+  }
+  &:hover {
+    background: $red_dark;
+  }
+}
+
+.btn-submit {
+  display: block;
+  font-size: 24px;
+  margin: 0 auto;
+  width: 320px;
 }
