Style the email form

--- a/css/application.css
+++ b/css/application.css
@@ -169,3 +169,26 @@ input[type=checkbox] {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: 160px 160px; }
+
+#insight-form {
+  margin: 0 auto;
+  overflow: hidden;
+  width: 480px; }
+
+input[type=email] {
+  background: rgba(255, 255, 255, 0.1);
+  border: none;
+  border-radius: 4px 0 0 4px;
+  box-shadow: none;
+  float: left;
+  font-size: 25px;
+  height: 65px;
+  padding: 10px;
+  position: relative;
+  width: calc(100% - 150px); }
+  input[type=email] + .btn-submit {
+    border-radius: 0 4px 4px 0;
+    float: left;
+    display: inline-block;
+    height: 65px;
+    width: 150px; }
